# experiment

./: LICENSE  README.md  bun.lockb  package.json
.github/: renovate.json
.github/workflows/: release.yml  test-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: commands.svelte.ts  index.ts
src/routes/: +page.svelte
